# parametric-insurance

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/agrishield_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  dashboard.py  farmers.py  gis.py  ml.py  observations.py  payouts.py  policies.py  triggers.py
backend/app/core/: __init__.py  security.py
backend/app/db/: session.py
backend/app/repositories/: auth_repository.py  common.py  gis_repository.py  platform_repository.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py  platform_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_smoke.py
backend/tests/unit/: test_security.py
database/: README.md
database/migrations/: 0001_initial_schema.sql  0002_optional_timescaledb.sql  0003_ml_outputs.sql
database/seeds/: 0001_reference_data.sql  0002_demo_latur_portfolio.sql
database/validation/: phase8_smoke.sql
database/views/: 0001_reporting_views.sql
docs/: local-runbook.md  phase-1-business-analysis.md  phase-2-system-architecture.md  phase-3-database-schema.md  phase-4-backend-apis.md  phase-5-frontend.md  phase-6-gis.md  phase-7-ml.md  phase-8-testing.md
docs/diagrams/: backend-components.mmd  system-context.mmd  trigger-payout-flow.mmd
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.tsx  (+1 more)
ml/: config.json
(+21 files in other folders)
